--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
+{
   "framework": "nextjs",
   "buildCommand": "npm run build",
   "installCommand": "npm install"
