--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@readyplayerme/react-avatar-creator": "^0.5.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "@readyplayerme/react-avatar-creator": "latest"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
