--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@readyplayerme/react-avatar-creator": "^0.5.0",
     "next": "14.2.3",
     "react": "^18",
